fixed colors for white & dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
     :root {
         --background-color: #1c1c1c;
-        --h1-text: #fff;
+        --h1-text: #5A537B;
         --header-color: #6943FF;
         --container-color: #F4F4F4;
-        --result-color: #273549;
-        --div-result: #fff;
+        --result-color: white;
+        --div-result: #fffff;
     }
 
     *{
@@ -37,13 +37,12 @@
         height: 100px;
         display: inline-block;
         width: 100px;
-        border: solid 0.15rem var(--h1-text);
         border-radius: 3px;
         margin: 20px;
         background: none;
         text-align: center;
         font-size: 3.5rem;
-        color: var(--h1-text);
+        color: white;
     }
     #convert{
         padding: 10px 25px;
